--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-HOST="192.168.1.108"
-PORT="80"
-USERNAME=""
-PASSWORD=""
-LOG=false
+AEDES_PORT="52835"
+
+DAHUA_HOST="192.168.1.108"
+DAHUA_PORT="80"
+DAHUA_USERNAME=""
+DAHUA_PASSWORD=""
+DAHUA_LOG=false
