--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-AEDES_PORT="52835"
-
-DAHUA_HOST="192.168.1.108"
+DAHUA_HOST=""
 DAHUA_PORT="80"
 DAHUA_USERNAME=""
 DAHUA_PASSWORD=""
 DAHUA_LOG=false
+DAHUA_ID=""
+
+SERVER_PORT=""
