--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "author": "zhanif",
   "license": "MIT",
   "dependencies": {
-    "aedes": "^0.50.0",
     "dotenv": "^16.3.1",
-    "keypather": "^3.0.0",
+    "keypather": "^3.1.0",
     "moment": "^2.29.4",
-    "net": "^1.0.2",
-    "net-keepalive": "^3.0.0",
-    "path": "^0.12.7",
-    "request": "^2.85.0",
-    "request-progress": "^3.0.0"
+    "net-keepalive": "^3.0.1",
+    "request": "^2.88.2",
+    "request-progress": "^3.0.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
